# arolib

./: .dockerignore  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile.bionic  Dockerfile.focal  Doxyfile  LICENSE  Makefile  README.md
analysis/: CMakeLists.txt
analysis/include/arolib/analysis/: harvesterplananalyser.hpp  olvplananalyser.hpp  plananalyserbase.hpp
analysis/src/: harvesterplananalyser.cpp  olvplananalyser.cpp  plananalyserbase.cpp
cartography/: CMakeLists.txt
cartography/include/arolib/cartography/: cellsrange.hpp  cellsrangeset.hpp  common.hpp  gridcellsinfomanager.hpp  gridmap.hpp  gridmap_layout.hpp  gridmap_numeric.hpp  gridmap_rgba32.hpp  sharedgridsmanager.hpp
cartography/src/: cellsrange.cpp  cellsrangeset.cpp  gridcellsinfomanager.cpp  gridmap_layout.cpp  gridmap_rgba32.cpp  sharedgridsmanager.cpp
cartography/test/: CMakeLists.txt  main.cpp  test_gridmap.cpp  test_gridmap_numeric.cpp
cartography/test results/: harvester_speed.ods
components/: CMakeLists.txt
components/include/arolib/components/: baseroutesinfieldplanner.h  baseroutesplanner.h  baseroutesprocessor.h  componentparametershelper.h  drivenmassareamanager.h  fieldgeometryprocessor.h  fieldprocessplanner.h  fieldprovider.h  generalrouteplanner.h  gpssimulator.h  graphprocessor.h  headlandbaseroutesplanner.h  headlandplanner.h  infieldbaseroutesplanner.h  machinedb.h  planpostprocessor.h  tracksgenerator.h  workedareamanager.h
components/src/: baseroutesinfieldplanner.cpp  baseroutesplanner.cpp  baseroutesprocessor.cpp  componentparametershelper.cpp  drivenmassareamanager.cpp  fieldgeometryprocessor.cpp  fieldprocessplanner.cpp  fieldprovider.cpp  generalrouteplanner.cpp  gpssimulator.cpp  graphprocessor.cpp  headlandbaseroutesplanner.cpp  headlandplanner.cpp  infieldbaseroutesplanner.cpp  machinedb.cpp  planpostprocessor.cpp  tracksgenerator.cpp  workedareamanager.cpp
components/test/: CMakeLists.txt  main.cpp  test_fieldgeometryprocessor.cpp  test_machinedb.cpp  test_tracksconnector.cpp
examples/: CMakeLists.txt
examples/example_harvesting/: CMakeLists.txt  example_harvesting.cpp
examples/example_spraying/: CMakeLists.txt  example_spraying.cpp
geometry/: CMakeLists.txt
geometry/include/arolib/geometry/: boost_geometries_wrapper.hpp  curves_helper.hpp  field_geometry_processing.hpp  geometry.hpp  geometry_helper.hpp  pathsmoother.hpp  tracksgenerator.h
geometry/src/: boost_geometries_wrapper.cpp  curves_helper.cpp  field_geometry_processing.cpp  geometry_helper.cpp  pathsmoother.cpp  tracksgenerator.cpp
geometry/test/: CMakeLists.txt  main.cpp  test_polygon.cpp  test_tracksGenerator.cpp
io/: CMakeLists.txt
io/include/arolib/io/: arodocument.hpp  arokmlindocument.hpp  arokmloutdocument.hpp  arotagsmanager.hpp  aroxmlindocument.hpp  aroxmloutdocument.hpp  io_common.hpp  io_db.hpp  io_hdf5.hpp  io_kml.hpp  io_xml.hpp  kmloutdocument_old.hpp  kmltags.hpp  xmlindocument.hpp  xmloutdocument.hpp
io/src/: arodocument.cpp  arokmlindocument.cpp  arokmloutdocument.cpp  arotagsmanager.cpp  aroxmlindocument.cpp  aroxmloutdocument.cpp  io_common.cpp  io_db.cpp  io_hdf5.cpp  io_kml.cpp  io_xml.cpp  kmlindocument.cpp  kmloutdocument_old.cpp  xmlindocument.cpp  xmloutdocument.cpp
io/test/: CMakeLists.txt  main.cpp  test_io_xml.cpp  test_mock.cpp
misc/: CMakeLists.txt
misc/include/arolib/misc/: base64Utility.hpp  basic_responses.h  basicconversions.hpp  (+11 more)
misc/src/: base64Utility.cpp  basic_responses.cpp  basicconversions.cpp  color_helper.cpp  container_helper.cpp  datetime.cpp  filesystem_helper.cpp  logger.cpp  loggingcomponent.cpp  mappable_parameters.cpp  randomgeneration.cpp  time_helper.cpp  tuple_helper.cpp
misc/test/: CMakeLists.txt  main.cpp  test_basicconversions.cpp  test_mappable_parameters.cpp
planning/: CMakeLists.txt
planning/src/: activitiesswitchingplanner.cpp  aro_functions.cpp  astar.cpp  astarPlan.cpp  directedgraph.cpp  edgeCostCalculator.cpp  edgeMassCalculator.cpp  edgeSpeedCalculator.cpp  generalplanningparameters.cpp  graph_builder_routes_based.cpp  graph_builder_tracks_based.cpp  graph_building_info.cpp  graphhelper.cpp  headlandrouteassembler.cpp  infieldtracksconnector.cpp  multiharvplanner.cpp  multiolvplanner.cpp  olvPlan.cpp  overloadPlannerHelper.cpp  overloadactivitiesplanner.cpp  planinfo.cpp  planningGridmapsHelper.cpp  planningworkspace.cpp  poseBasedAStar.cpp  poseBasedCostCalculator.cpp  poseBasedGraph.cpp  roundtripplanner.cpp  route_planner_standalone_machines.cpp  routeassembler.cpp  simpleBaseRoutesPlanner.cpp  simpleMultiOLVPlanner.cpp  simpletracksequencer.cpp  transit_restrictions.cpp  visit_period.cpp
planning/src/edge_calculators/: edgeCostCalculator.cpp  edgeCostCalculatorSoil.cpp  edgeMassCalculator.cpp  edgeSpeedCalculator.cpp
planning/src/path_search/: astar.cpp  astarPlan.cpp  astar_successor_checkers.cpp  directedgraph.cpp  graph_builder_tracks_based.cpp  graph_building_info.cpp  graphhelper.cpp  poseBasedAStar.cpp  poseBasedCostCalculator.cpp  poseBasedGraph.cpp
planning/src/track_connectors/: infieldtracksconnector.cpp  infieldtracksconnectordef.cpp  infieldtracksconnectordubins.cpp  infieldtracksconnectordubinsorgraphbased.cpp  infieldtracksconnectorgraphbased.cpp
planning/src/track_sequencing/: simpletracksequencer.cpp  tracksequencer.cpp  tracksequenceradjacentnext.cpp  tracksequencerclosestnext.cpp  tracksequencerspiral.cpp
planning/test/: CMakeLists.txt  main.cpp  old_test_tracksequencer.cpp  test_mock.cpp
processing/: CMakeLists.txt
processing/src/: overrideMapProcessor.cpp  route_smoother.cpp
processing/test/: CMakeLists.txt  main.cpp
types/: CMakeLists.txt
types/src/: coordtransformer.cpp  field.cpp  fieldaccesspoint.cpp  headland.cpp  headlandroute.cpp  machine.cpp  machinedynamicinfo.cpp  materialFlowType.cpp  outfieldinfo.cpp  point.cpp  pose2D.cpp  resourcepoint.cpp  route.cpp  route_point.cpp  track.cpp  units.cpp
types/test/: CMakeLists.txt  main.cpp  old test_hashValues.cpp  test_coordtransformer.cpp  test_headland.cpp  test_machine.cpp  test_route.cpp
(+98 files in other folders)
